add font montserrat

--- a/app/less/main.less
+++ b/app/less/main.less
@@ -1,2 +1,10 @@
 @import "imports/_var";
+@import "imports/_mixins";
 
+body {
+  @font-face {
+    .font-montserrat;
+  }
+  font-family: 'Montserat', sans-serif;
+  font-size: 16px;
+}
