add header html/css for desktop

--- a/app/less/imports/_var.less
+++ b/app/less/imports/_var.less
@@ -1,2 +1,8 @@
+//Sizes
 @gutter: 15px;
+//Fonts
 @path-fonts: '../../fonts';
+//Colors
+@green-accent: #81b214;
+@bg-light: #faf3ee;
+@text-black: #212121;
