--- a/app/less/main.less
+++ b/app/less/main.less
@@ -1,3 +1,4 @@
+@import "node_modules/normalize.less/normalize.less";
 @import "imports/_var";
 @import "imports/_mixins";
 
@@ -7,4 +8,66 @@ body {
   }
   font-family: 'Montserat', sans-serif;
   font-size: 16px;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.flex {
+  display: flex;
+}
+
+.grid {
+  display: grid;
+}
+
+//Header
+.header {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  //height: 8vh;
+  background-color: @bg-light;
+  box-shadow: 0px 1px 5px 0px rgba(82,82,82,1);
+
+  &-logo {
+    padding: @gutter;
+    font-size: 18px;
+
+    .logo-link {
+      color: @text-black;
+      text-decoration: none;
+      transition: color ease .4s;
+
+      &:hover {
+        color: @green-accent;
+      }
+    }
+
+  }
+
+  &-nav {
+
+    &-list {
+      list-style: none;
+
+      &-item {
+        display: inline-block;
+      }
+
+      &-link {
+        padding: @gutter calc(@gutter + 10px);
+        color: @text-black;
+        text-decoration: none;
+        line-height: 20px;
+        transition: color ease .4s;
+
+        &:hover {
+          color: @green-accent;
+        }
+      }
+    }
+  }
 }
