--- a/app/less/imports/_var.less
+++ b/app/less/imports/_var.less
@@ -4,5 +4,7 @@
 @path-fonts: '../../fonts';
 //Colors
 @green-accent: #81b214;
+@green-dark: #206a5d;
 @bg-light: #faf3ee;
 @text-black: #212121;
+@text-light: #f6f4f4;
