--- a/app/less/main.less
+++ b/app/less/main.less
@@ -3,14 +3,15 @@
 @import "imports/_mixins";
 
 body {
-  @font-face {
-    .font-montserrat;
-  }
-  font-family: 'Montserat', sans-serif;
+  //@font-face {
+  //  .font-montserrat;
+  //}
+  font-family: 'Montserrat', Arial, sans-serif;
   font-size: 16px;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  line-height: 1.5;
 }
 
 .flex {
@@ -21,20 +22,48 @@ body {
   display: grid;
 }
 
+.parallax {
+  overflow-x: hidden;
+  overflow-y: hidden;
+
+  &:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    z-index: -2;
+    transform-origin: center;
+    transition: transform .4s linear;
+    transform: perspective(800px) rotateX(5deg) scale(1.1);
+    //need to add bg-img for sections where it used
+  }
+
+
+}
+
+
 //Header
 .header {
   position: relative;
-  display: flex;
+  //display: flex;
+  display: none;
   justify-content: space-between;
   align-items: center;
   width: 100%;
   //height: 8vh;
   background-color: @bg-light;
-  box-shadow: 0px 1px 5px 0px rgba(82,82,82,1);
+  box-shadow: 0px 1px 5px 0px rgba(82, 82, 82, 1);
 
   &-logo {
     padding: @gutter;
-    font-size: 18px;
+    width: 100px;
+
 
     .logo-link {
       color: @text-black;
@@ -61,7 +90,8 @@ body {
         padding: @gutter calc(@gutter + 10px);
         color: @text-black;
         text-decoration: none;
-        line-height: 20px;
+        font-size: 18px;
+        font-weight: 500;
         transition: color ease .4s;
 
         &:hover {
@@ -73,3 +103,53 @@ body {
 }
 
 //Section intro
+.intro {
+  position: relative;
+  min-height: 92vh;
+  //min-width: 100vw;
+  grid-template-columns: 1fr 2fr;
+
+  &:before {
+    //bg-img for parallax
+    background-image: url('../images/dest/intro.webp')
+  }
+
+  &-content {
+    position: relative;
+    padding: @gutter 0 0 calc(@gutter + 45px);
+    justify-items: center;
+  }
+
+  &-logo {
+    width: 150px;
+    margin-bottom: 60px;
+  }
+
+  &-title {
+    font-size: 64px;
+    line-height: 1.1;
+  }
+
+  &-text {
+    font-size: 20px;
+  }
+
+  &-button {
+    display: block;
+    padding: @gutter calc(@gutter + 20px);
+    margin-top: 45px;
+    max-width: 50%;
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+    color: @text-light;
+    background-color: @green-accent;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: all ease 0.4s;
+    &:hover {
+      background-color: darken(@green-accent, 4%);
+      color: darken(@text-light, 3%);
+    }
+  }
+}
