add section with brands

--- a/app/less/imports/_var.less
+++ b/app/less/imports/_var.less
@@ -6,5 +6,8 @@
 @green-accent: #81b214;
 @green-dark: #206a5d;
 @bg-light: #faf3ee;
+@bg-dark: #212121;
 @text-black: #212121;
 @text-light: #f6f4f4;
+//Gradient
+@grd-bw: linear-gradient(180deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.8));
