--- a/app/less/main.less
+++ b/app/less/main.less
@@ -27,6 +27,10 @@ body {
   margin: 0 auto;
 }
 
+.section {
+  margin-bottom: 45px;
+}
+
 .parallax {
   overflow-x: hidden;
   overflow-y: hidden;
@@ -67,7 +71,7 @@ body {
   width: 100%;
   //height: 8vh;
   background-color: @bg-light;
-  box-shadow: 0px 1px 5px 0px rgba(82, 82, 82, 1);
+  box-shadow: 0 1px 5px 0 rgba(82, 82, 82, 1);
 
   &-logo {
     padding: @gutter;
@@ -115,7 +119,6 @@ body {
 .intro {
   position: relative;
   min-height: 100vh;
-  //min-width: 100vw;
   grid-template-columns: 1fr 2fr;
 
   &:before {
@@ -181,7 +184,7 @@ body {
   &-content {
     grid-column: 2;
     align-items: center;
-    padding: @gutter calc(@gutter * 2);
+    padding: @gutter @gutter-dbl;
   }
 }
 
@@ -228,5 +231,38 @@ body {
       }
     }
 
+  }
+}
+
+//Map Section
+.stores {
+  &-container {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  &-map {
+    margin: @gutter;
+  }
+
+  &-text {
+    align-items: center;
+    padding: @gutter @gutter-dbl;
+
+    &-sub-title {
+      font-size: 24px;
+      margin-bottom: @gutter;
+    }
+
+    &-tel {
+      display: inline-block;
+      font-size: 1.2em;
+      color: @green-accent;
+      text-decoration: none;
+      cursor: pointer;
+
+      &:hover {
+        color: darken(@green-accent, 4%);
+      }
+    }
   }
 }
