--- a/app/less/main.less
+++ b/app/less/main.less
@@ -60,35 +60,35 @@ body {
   font-weight: 600;
 }
 
+//Logo
+.company-logo {
+  padding: @gutter;
+  width: 100px;
+
+  .logo-link {
+    color: @text-black;
+    text-decoration: none;
+    transition: color ease .4s;
+
+    &:hover {
+      color: @green-accent;
+    }
+  }
+
+}
+
 
 //Header
 .header {
   position: relative;
-  //display: flex;
-  display: none;
+  display: flex;
+  //display: none;
   justify-content: space-between;
   align-items: center;
   width: 100%;
   //height: 8vh;
   background-color: @bg-light;
   box-shadow: 0 1px 5px 0 rgba(82, 82, 82, 1);
-
-  &-logo {
-    padding: @gutter;
-    width: 100px;
-
-
-    .logo-link {
-      color: @text-black;
-      text-decoration: none;
-      transition: color ease .4s;
-
-      &:hover {
-        color: @green-accent;
-      }
-    }
-
-  }
 
   &-nav {
 
@@ -321,6 +321,42 @@ body {
       height: 180px;
       border-radius: 50%;
       background-position: center;
+    }
+  }
+}
+
+//Footer
+.footer {
+  background-color: @bg-dark;
+  color: @text-light;
+  &-container {
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+  }
+  &-rights {
+    text-align: center;
+    background-color: black;
+    padding: @gutter 0;
+  }
+}
+
+//Social Links
+.social-links {
+  &-list {
+    list-style: none;
+    &-item {
+      display: inline-block;
+      a {
+        font-size: 22px;
+        color: @text-light;
+        text-decoration: none;
+        padding: 8px;
+        cursor: pointer;
+        &:hover {
+          color: darken(@text-light, 10%);
+        }
+      }
     }
   }
 }
