--- a/app/less/main.less
+++ b/app/less/main.less
@@ -80,15 +80,26 @@ body {
 
 //Header
 .header {
-  position: relative;
+  position: absolute;
   display: flex;
-  //display: none;
   justify-content: space-between;
   align-items: center;
+  top: -8vh;
+  left: 0;
   width: 100%;
-  //height: 8vh;
+  height: 8vh;
   background-color: @bg-light;
   box-shadow: 0 1px 5px 0 rgba(82, 82, 82, 1);
+  transition: top .3s ease;
+  z-index: 2;
+
+  &-sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    margin-top: 0;
+    height: 70px;
+  }
 
   &-nav {
 
