add delivery button and change colors on page

--- a/app/less/imports/_var.less
+++ b/app/less/imports/_var.less
@@ -4,7 +4,7 @@
 //Fonts
 @path-fonts: '../../fonts';
 //Colors
-@green-accent: #81b214;
+@green-accent: #65b24e;
 @green-dark: #206a5d;
 @bg-light: #faf3ee;
 @bg-dark: #212121;
