add interaction links all over the web page

--- a/app/less/main.less
+++ b/app/less/main.less
@@ -337,7 +337,7 @@ body {
     bottom: 0;
     right: 0;
     background-color: @bg-dark;
-    opacity: .34;
+    opacity: .54;
   }
 
   &-content {
@@ -355,6 +355,7 @@ body {
 
       &-logo {
         max-width: 200px;
+        filter: brightness(0) invert(1);
       }
     }
 
