--- a/app/less/main.less
+++ b/app/less/main.less
@@ -108,7 +108,7 @@ body {
   align-items: center;
   top: -12vh;
   left: 0;
-  width: 100%;
+  width: 100vw;
   height: 8vh;
   background-color: @bg-light;
   box-shadow: 0 1px 5px 0 rgba(82, 82, 82, 1);
@@ -137,7 +137,7 @@ body {
         color: @text-black;
         text-decoration: none;
         text-transform: uppercase;
-        font-size: 18px;
+        font-size: 15px;
         font-weight: 500;
         transition: color ease .4s;
 
@@ -313,7 +313,7 @@ body {
 //Brands Section
 .brands {
   position: relative;
-  min-height: 550px;
+  //min-height: 550px;
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
@@ -349,6 +349,7 @@ body {
   &-list {
     grid-template-columns: repeat(3, 1fr);
     padding: @gutter;
+    margin-bottom: @gutter-dbl;
 
     &-item {
       text-align: center;
