--- a/app/less/imports/_var.less
+++ b/app/less/imports/_var.less
@@ -8,6 +8,7 @@
 @green-dark: #206a5d;
 @bg-light: #faf3ee;
 @bg-dark: #212121;
+@bg-brown: #fde9d4;
 @text-black: #212121;
 @text-light: #f6f4f4;
 //Gradient
