add media for intro and about section

--- a/app/less/imports/_media.less
+++ b/app/less/imports/_media.less
@@ -37,17 +37,24 @@
       background: @bg-brown;
     }
     &-logo {
-      width: 30%;
+      width: 50%;
+      align-self: center;
+      justify-self: center;
     }
     &-vertical {
       width: 80%;
       margin: 0 auto;
     }
+    &-content {
+      padding-left: 0;
+    }
+    &-button {
+      width: 90%;
+    }
   }
 
   .about {
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
   }
 }
 
