--- a/app/less/main.less
+++ b/app/less/main.less
@@ -47,7 +47,7 @@ body {
 }
 
 .section-title {
-  font-size: 3rem;
+  font-size: 3em;
   font-weight: 600;
   margin-bottom: @gutter;
 }
@@ -170,7 +170,7 @@ body {
     margin-top: @gutter;
   }
   &-title {
-    font-size: 4rem;
+    font-size: 4em;
     line-height: 1.1;
     margin-top: @gutter-dbl;
   }
@@ -204,7 +204,7 @@ body {
     position: relative;
     overflow: hidden;
     margin: @gutter;
-    max-height: 480px;
+    height: 480px;
     border-radius: 15px;
 
     img {
@@ -224,9 +224,9 @@ body {
   grid-template-rows: 0.7fr 2.3fr;
 
   &-text {
-    align-items: center;
     padding: @gutter @gutter-dbl;
     text-align: center;
+    align-items: center;
   }
 
   &-content {
@@ -263,7 +263,7 @@ body {
         max-width: 90%;
         cursor: pointer;
         vertical-align: middle;
-        height: 50px;
+        height: 3em;
         text-align: left;
         outline: none;
         transition: color .5s ease;
