--- a/app/less/imports/_media.less
+++ b/app/less/imports/_media.less
@@ -78,11 +78,14 @@
 
       &-list {
         display: flex;
+
         &-item {
           width: 80vw;
+
           &-img {
             height: 50vh;
             width: 80vw;
+
             img {
               height: auto;
               width: 100%;
@@ -93,6 +96,26 @@
       }
     }
 
+  }
+
+  .way {
+    &-container {
+      grid-template-columns: 1fr;
+    }
+
+    &-item {
+
+      &-img {
+        width: 50vw;
+        height: 50vw;
+        background-size: cover;
+      }
+
+      &-caption {
+        justify-self: center;
+        width: 50vw;
+      }
+    }
   }
 }
 
