--- a/app/less/imports/_media.less
+++ b/app/less/imports/_media.less
@@ -117,6 +117,20 @@
       }
     }
   }
+
+  .stores {
+    &-container {
+      grid-template-columns: 1fr;
+      text-align: center;
+    }
+  }
+
+  .footer-container {
+    flex-direction: column-reverse;
+    .company-logo {
+      width: 30%;
+    }
+  }
 }
 
 @media only screen and (max-device-width: 480px) {
