add media for header

--- a/app/less/imports/_media.less
+++ b/app/less/imports/_media.less
@@ -30,6 +30,17 @@
     font-size: 35px;
   }
 
+  .company-logo {
+    width: 30%;
+  }
+
+  .header {
+    height: 8vh;
+    &-nav {
+      display: none;
+    }
+  }
+
   .intro {
     height: auto;
     grid-template-columns: 1fr;
@@ -127,9 +138,6 @@
 
   .footer-container {
     flex-direction: column-reverse;
-    .company-logo {
-      width: 30%;
-    }
   }
 }
 
