--- a/app/less/main.less
+++ b/app/less/main.less
@@ -9,6 +9,7 @@ body {
   font-family: 'Montserrat', Arial, sans-serif;
   font-size: 15px;
   box-sizing: border-box;
+  position: relative;
   margin: 0;
   padding: 0;
   line-height: 1.5;
@@ -21,6 +22,27 @@ body {
 
 .grid {
   display: grid;
+}
+
+.side-button {
+  position: fixed;
+  right: 0.5em;
+  bottom: 1em;
+  width: 55px;
+  height: 55px;
+  padding: 5px;
+  font-size: 25px;
+  line-height: 55px;
+  color: @text-black;
+  text-align: center;
+  border-radius: 50%;
+  background-color: @bg-light;
+  z-index: 5;
+  transition: all .4s ease;
+  &:hover {
+    background-color: @text-black;
+    color: @bg-light;
+  }
 }
 
 .button {
@@ -478,7 +500,7 @@ body {
 
   &-rights {
     text-align: center;
-    background-color: black;
+    background-color: @text-black;
     padding: @gutter 0;
   }
 }
