change size of products buttons

--- a/app/less/main.less
+++ b/app/less/main.less
@@ -253,7 +253,7 @@ body {
   }
 
   &-content {
-    grid-template-columns: 0.7fr 2.3fr;
+    grid-template-columns: 0.8fr 2.2fr;
     padding: @gutter 0;
 
     .cat-tab {
@@ -286,6 +286,7 @@ body {
         max-width: 90%;
         cursor: pointer;
         vertical-align: middle;
+        font-size: 1.2em;
         height: 3em;
         text-align: left;
         outline: none;
