--- a/app/less/imports/_var.less
+++ b/app/less/imports/_var.less
@@ -13,4 +13,7 @@
 @text-light: #f6f4f4;
 //Gradient
 @grd-bw: linear-gradient(180deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.8));
-//SVG
+//Brands
+@brand-viber: #665CAC;
+@brand-telegram: #0088cc;
+@brand-whatsapp: #4AC959;
