--- a/app/less/imports/_var.less
+++ b/app/less/imports/_var.less
@@ -13,6 +13,7 @@
 @text-light: #f6f4f4;
 //Gradient
 @grd-bw: linear-gradient(180deg, rgba(0, 0, 0, 0.7) 0%, rgba(0, 0, 0, 0.8));
+@grd-insta: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
 //Brands
 @brand-viber: #665CAC;
 @brand-telegram: #0088cc;
