--- a/app/less/main.less
+++ b/app/less/main.less
@@ -26,23 +26,23 @@ body {
 
 .side-button {
   position: fixed;
-  right: 0.5em;
+  right: 1em;
   bottom: 1em;
   width: 55px;
   height: 55px;
-  padding: 5px;
-  font-size: 25px;
+  padding: 5px 5px 3px 5px;
+  font-size: 30px;
   line-height: 55px;
-  color: @text-black;
+  color: @text-light;
   text-align: center;
   border-radius: 50%;
-  background-color: @bg-light;
+  background: @grd-insta;
+  box-shadow: 0 3px 10px rgba(0,0,0,.25);
   z-index: 5;
   transition: all .4s ease;
 
   &:hover {
-    background-color: @text-black;
-    color: @bg-light;
+    transform: scale(0.9);
   }
 }
 
