--- a/app/less/main.less
+++ b/app/less/main.less
@@ -679,5 +679,35 @@ body {
   }
 }
 
+//404 page
+
+.page404 {
+  max-width: 70%;
+  margin: 20vh auto;
+
+  text-align: center;
+  &-title {
+    font-size: 2.7rem;
+    color: @green-accent;
+    strong {
+      color: @text-black;
+      font-size: 5rem;
+    }
+  }
+  &-text {
+    font-size: 1.5rem;
+  }
+  &-button {
+    color: @green-accent;
+    border: 2px solid @green-accent;
+    font-size: 1.2rem;
+    width: 50%;
+    margin: 0 auto;
+    &:hover, &:active {
+      background-color: @green-accent;
+      color: @text-light;
+    }
+  }
+}
 
 @import "imports/_media";
