--- a/app/less/imports/_media.less
+++ b/app/less/imports/_media.less
@@ -41,8 +41,16 @@
     width: 30%;
   }
 
+  .section-title {
+    text-align: left;
+    margin-left: @gutter-dbl;
+    padding-bottom: @gutter-dbl;
+    line-height: 1.2;
+  }
+
   .header {
     height: 8vh;
+
     &-nav {
       display: none;
     }
@@ -82,6 +90,11 @@
   }
 
   .products {
+    &-paragraph {
+      text-align: left;
+      margin-left: @gutter;
+    }
+
     &-content {
       grid-template-columns: 1fr;
 
@@ -102,7 +115,7 @@
           width: 80vw;
 
           &-img {
-            height: 50vh;
+            min-height: 50vh;
             width: 80vw;
 
             img {
@@ -115,6 +128,12 @@
       }
     }
 
+  }
+
+  .brands {
+    &-title {
+      text-align: center;
+    }
   }
 
   .way {
@@ -141,6 +160,10 @@
     &-container {
       grid-template-columns: 1fr;
       text-align: center;
+    }
+
+    &-text {
+      text-align: left;
     }
   }
 
