--- a/app/less/main.less
+++ b/app/less/main.less
@@ -576,6 +576,16 @@ body {
     width: 100%;
   }
 
+  &-email {
+    color: @text-black;
+    font-weight: 600;
+    text-decoration: none;
+
+    &:hover {
+      color: lighten(@text-black, 10%);
+    }
+  }
+
   &-rights {
     text-align: center;
     background-color: @text-black;
