--- a/app/less/main.less
+++ b/app/less/main.less
@@ -455,6 +455,11 @@ body {
   &-map {
     align-self: center;
     margin: 0 @gutter;
+    &-frame {
+      width: 100%;
+      height: 650px;
+      border: none;
+    }
   }
 
   &-text {
